changed the tag to a page on jsconsole.html

--- a/scripts/jsconsole.html
+++ b/scripts/jsconsole.html
@@ -1,1 +1,14 @@
-<script>console.log("hacked2");</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>hacked</title>
+</head>
+<body>
+    You Got hacked
+    <script>console.log("hacked2");</script>
+    
+</body>
+</html>
